export const snapshot = {};

snapshot[`after onRunStart 1`] = `""`;

snapshot[`after onScenarioStart - Simple passing scenario (1) 1`] = `""`;

snapshot[`after onStepStart - Step that passes (1) 1`] = `""`;

snapshot[`after onStepEnd - Step that passes (1) 1`] = `""`;

snapshot[`after onScenarioEnd - Simple passing scenario (1) 1`] = `"[32m.[39m"`;

snapshot[`after onScenarioStart - Simple passing scenario (2) 1`] = `"[32m.[39m"`;

snapshot[`after onStepStart - Step that passes (2) 1`] = `"[32m.[39m"`;

snapshot[`after onStepEnd - Step that passes (2) 1`] = `"[32m.[39m"`;

snapshot[`after onScenarioEnd - Simple passing scenario (2) 1`] = `"[32m.[39m[32m.[39m"`;

snapshot[`after onScenarioStart - Simple passing scenario (3) 1`] = `"[32m.[39m[32m.[39m"`;

snapshot[`after onStepStart - Step that passes (3) 1`] = `"[32m.[39m[32m.[39m"`;

snapshot[`after onStepEnd - Step that passes (3) 1`] = `"[32m.[39m[32m.[39m"`;

snapshot[`after onScenarioEnd - Simple passing scenario (3) 1`] = `"[32m.[39m[32m.[39m[32m.[39m"`;

snapshot[`after onRunEnd 1`] = `
"[32m.[39m[32m.[39m[32m.[39m

3 passed, 0 failed (45ms)
"
`;

snapshot[`after onRunStart 2`] = `""`;

snapshot[`after onScenarioStart - Simple passing scenario (1) 2`] = `""`;

snapshot[`after onStepStart - Step that passes (1) 2`] = `""`;

snapshot[`after onStepEnd - Step that passes (1) 2`] = `""`;

snapshot[`after onScenarioEnd - Simple passing scenario (1) 2`] = `"[32m.[39m"`;

snapshot[`after onScenarioStart - Scenario with failing step (2) 1`] = `"[32m.[39m"`;

snapshot[`after onStepStart - Step that passes (2-1) 1`] = `"[32m.[39m"`;

snapshot[`after onStepEnd - Step that passes (2-1) 1`] = `"[32m.[39m"`;

snapshot[`after onStepStart - Step that fails (2-2) 1`] = `"[32m.[39m"`;

snapshot[`after onStepEnd - Step that fails (2-2) 1`] = `"[32m.[39m"`;

snapshot[`after onScenarioEnd - Scenario with failing step (2) 1`] = `"[32m.[39m[31mF[39m"`;

snapshot[`after onScenarioStart - Simple passing scenario (3) 2`] = `"[32m.[39m[31mF[39m"`;

snapshot[`after onStepStart - Step that passes (3) 2`] = `"[32m.[39m[31mF[39m"`;

snapshot[`after onStepEnd - Step that passes (3) 2`] = `"[32m.[39m[31mF[39m"`;

snapshot[`after onScenarioEnd - Simple passing scenario (3) 2`] = `"[32m.[39m[31mF[39m[32m.[39m"`;

snapshot[`after onRunEnd 2`] = `
"[32m.[39m[31mF[39m[32m.[39m

2 passed, 1 failed (35ms)

[1mFailed Tests[22m

  [31m✗[39m Scenario with failing step [90m>[39m Step that fails(test.scenario.ts:20)
"
`;

snapshot[`after onRunStart 3`] = `""`;

snapshot[`after onRunEnd 3`] = `
"

0 passed, 0 failed (0ms)
"
`;

snapshot[`after onRunStart 4`] = `""`;

snapshot[`after onScenarioStart - Simple passing scenario (1) 3`] = `""`;

snapshot[`after onStepStart - Step that passes (1) 3`] = `""`;

snapshot[`after onStepEnd - Step that passes (1) 3`] = `""`;

snapshot[`after onScenarioEnd - Simple passing scenario (1) 3`] = `"."`;

snapshot[`after onScenarioStart - Simple passing scenario (2) 2`] = `"."`;

snapshot[`after onStepStart - Step that passes (2) 2`] = `"."`;

snapshot[`after onStepEnd - Step that passes (2) 2`] = `"."`;

snapshot[`after onScenarioEnd - Simple passing scenario (2) 2`] = `".."`;

snapshot[`after onScenarioStart - Simple passing scenario (3) 3`] = `".."`;

snapshot[`after onStepStart - Step that passes (3) 3`] = `".."`;

snapshot[`after onStepEnd - Step that passes (3) 3`] = `".."`;

snapshot[`after onScenarioEnd - Simple passing scenario (3) 3`] = `"..."`;

snapshot[`after onRunEnd 4`] = `
"...

3 passed, 0 failed (45ms)
"
`;

snapshot[`after onRunStart 5`] = `""`;

snapshot[`after onScenarioStart - Simple passing scenario (1) 4`] = `""`;

snapshot[`after onStepStart - Step that passes (1) 4`] = `""`;

snapshot[`after onStepEnd - Step that passes (1) 4`] = `""`;

snapshot[`after onScenarioEnd - Simple passing scenario (1) 4`] = `"."`;

snapshot[`after onScenarioStart - Scenario with failing step (2) 2`] = `"."`;

snapshot[`after onStepStart - Step that passes (2-1) 2`] = `"."`;

snapshot[`after onStepEnd - Step that passes (2-1) 2`] = `"."`;

snapshot[`after onStepStart - Step that fails (2-2) 2`] = `"."`;

snapshot[`after onStepEnd - Step that fails (2-2) 2`] = `"."`;

snapshot[`after onScenarioEnd - Scenario with failing step (2) 2`] = `".F"`;

snapshot[`after onScenarioStart - Simple passing scenario (3) 4`] = `".F"`;

snapshot[`after onStepStart - Step that passes (3) 4`] = `".F"`;

snapshot[`after onStepEnd - Step that passes (3) 4`] = `".F"`;

snapshot[`after onScenarioEnd - Simple passing scenario (3) 4`] = `".F."`;

snapshot[`after onRunEnd 5`] = `
".F.

2 passed, 1 failed (35ms)

Failed Tests

  ✗ Scenario with failing step > Step that fails(test.scenario.ts:20)
"
`;

snapshot[`after onRunStart 6`] = `""`;

snapshot[`after onRunEnd 6`] = `
"

0 passed, 0 failed (0ms)
"
`;
